trunk/modules/pluto-module-dataprocess/src/main/java/com/clican/pluto/dataprocess/dpl/parser/javacc/PlSql.java
/* Generated By:JavaCC: Do not edit this line. PlSql.java */
package com.clican.pluto.dataprocess.dpl.parser.javacc;

import java.io.ByteArrayInputStream;
import java.io.InputStream;
import java.util.ArrayList;
import java.util.HashSet;
import java.util.List;
import java.util.Set;

import com.clican.pluto.dataprocess.dpl.function.impl.Divide;
import com.clican.pluto.dataprocess.dpl.function.impl.Minus;
import com.clican.pluto.dataprocess.dpl.function.impl.Multi;
import com.clican.pluto.dataprocess.dpl.function.impl.Plus;
import com.clican.pluto.dataprocess.dpl.parser.bean.Column;
import com.clican.pluto.dataprocess.dpl.parser.bean.PrefixAndSuffix;
import com.clican.pluto.dataprocess.dpl.parser.eunmeration.CompareType;
import com.clican.pluto.dataprocess.dpl.parser.object.From;
import com.clican.pluto.dataprocess.dpl.parser.object.Function;
import com.clican.pluto.dataprocess.dpl.parser.object.filter.AndFilter;
import com.clican.pluto.dataprocess.dpl.parser.object.filter.CompareFilter;
import com.clican.pluto.dataprocess.dpl.parser.object.filter.Filter;
import com.clican.pluto.dataprocess.dpl.parser.object.filter.OrFilter;

class PlSql implements PlSqlConstants {

	/**
	 * Parse PL/SQL from files. Each arg is expected to be the name of a file,
	 * or "-" to indicate System.in.
	 */
	public static void main(String args[]) throws Throwable {
		String dpl = "select aList.id,toChar(aList.date) as date from aList where (aList.id=1 and aList.name='aaa') or (aList.id=2 and aList.name='bbb')";
		InputStream is = new ByteArrayInputStream(dpl.getBytes());
		final PlSql parser = new PlSql(is);
		parser.parse();
	}

	public Set<String> functions = new HashSet<String>();
	public Set<String> procedures = new HashSet<String>();
	public Set<String> tables = new HashSet<String>();
	public List<Object> columns = new ArrayList<Object>();
	public From from = new From(new ArrayList<String>());
	public Filter filter;

	final public void BindVariable() throws ParseException {
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case S_BIND:
			jj_consume_token(S_BIND);
			break;
		case 48:
			jj_consume_token(48);
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case S_NUMBER:
				jj_consume_token(S_NUMBER);
				break;
			case S_IDENTIFIER:
				jj_consume_token(S_IDENTIFIER);
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case 49:
					jj_consume_token(49);
					jj_consume_token(S_IDENTIFIER);
					break;
				default:
					jj_la1[0] = jj_gen;
					;
				}
				break;
			default:
				jj_la1[1] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			break;
		default:
			jj_la1[2] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
	}

	final public String SubQuery() throws ParseException {
		SelectStatement();
		{
			if (true)
				return "";
		}
		throw new Error("Missing return statement in function");
	}

	final public void parse() throws ParseException {
		SelectStatement();
		FromClause();
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case K_WHERE:
			WhereClause();
			break;
		default:
			jj_la1[3] = jj_gen;
			;
		}
	}

	final public void SelectStatement() throws ParseException {
		jj_consume_token(K_SELECT);
		SelectList();
	}

	final public void SelectList() throws ParseException {
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case 50:
			jj_consume_token(50);
			break;
		case K_LEFT_BRACE:
		case S_NUMBER:
		case S_IDENTIFIER:
		case S_BIND:
		case S_CHAR_LITERAL:
		case S_QUOTED_IDENTIFIER:
		case 48:
			SelectItem();
			label_1: while (true) {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case 51:
					;
					break;
				default:
					jj_la1[4] = jj_gen;
					break label_1;
				}
				jj_consume_token(51);
				SelectItem();
			}
			break;
		default:
			jj_la1[5] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
	}

	final public String OracleObjectName() throws ParseException {
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case S_IDENTIFIER:
			jj_consume_token(S_IDENTIFIER);
			{
				if (true)
					return token.image;
			}
			break;
		case S_QUOTED_IDENTIFIER:
			jj_consume_token(S_QUOTED_IDENTIFIER);
			String s = token.image;
			{
				if (true)
					return s.substring(1, s.length() - 1);
			}
			break;
		default:
			jj_la1[6] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		throw new Error("Missing return statement in function");
	}

	final public void SelectItem() throws ParseException {
		String columnName = null;
		Object column;
		column = SQLSimpleExpression();
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case K_AS:
		case S_IDENTIFIER:
		case S_QUOTED_IDENTIFIER:
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case K_AS:
				jj_consume_token(K_AS);
				break;
			default:
				jj_la1[7] = jj_gen;
				;
			}
			columnName = OracleObjectName();
			break;
		default:
			jj_la1[8] = jj_gen;
			;
		}
		if (column instanceof Function) {
			((Function) column).setColumnName(columnName);
			columns.add(column);
		} else {
			Column col = new Column();
			col.setPrefixAndSuffix((PrefixAndSuffix) column);
			col.setColumnName(columnName);
			columns.add(col);
		}
	}

	final public void FromClause() throws ParseException {
		jj_consume_token(K_FROM);
		TableReference();
		label_2: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 51:
				;
				break;
			default:
				jj_la1[9] = jj_gen;
				break label_2;
			}
			jj_consume_token(51);
			TableReference();
		}
	}

	final public void TableReference() throws ParseException {
		String tableName = null;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case S_IDENTIFIER:
		case S_QUOTED_IDENTIFIER:
			tableName = TableName();
			from.getVariableNames().add(tableName);
			break;
		case K_LEFT_BRACE:
			jj_consume_token(K_LEFT_BRACE);
			SubQuery();
			jj_consume_token(K_RIGHT_BRACE);
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case K_AS:
				jj_consume_token(K_AS);
				tableName = OracleObjectName();
				from.getVariableNames().add(tableName);
				break;
			default:
				jj_la1[10] = jj_gen;
				;
			}
			break;
		default:
			jj_la1[11] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
	}

	final public PrefixAndSuffix SQLSimpleExpression() throws ParseException {
		Function function = null;
		List<Object> params = new ArrayList<Object>();
		Object param;
		param = SQLMultiplicativeExpression();
		params.add(param);
		label_3: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 52:
			case 53:
				;
				break;
			default:
				jj_la1[12] = jj_gen;
				break label_3;
			}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 52:
				jj_consume_token(52);
				if (function != null) {
					params.clear();
					params.add(function);
				}
				function = new Plus();
				try {
					function.setParams(params, null);
				} catch (Exception e) {
					{
						if (true)
							throw new ParseException(e.getMessage());
					}
				}
				break;
			case 53:
				jj_consume_token(53);
				if (function != null) {
					params.clear();
					params.add(function);
				}
				function = new Minus();
				try {
					function.setParams(params, null);
				} catch (Exception e) {
					{
						if (true)
							throw new ParseException(e.getMessage());
					}
				}
				break;
			default:
				jj_la1[13] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			param = SQLMultiplicativeExpression();
			params.add(param);
		}
		if (function != null) {
			{
				if (true)
					return new PrefixAndSuffix(function);
			}
		} else {
			PrefixAndSuffix pas;
			if (param instanceof Function) {
				pas = new PrefixAndSuffix((Function) param);
			} else {
				try {
					pas = new PrefixAndSuffix((String) param, null);
				} catch (Exception e) {
					{
						if (true)
							throw new ParseException(e.getMessage());
					}
				}

			}
			{
				if (true)
					return pas;
			}
		}
		throw new Error("Missing return statement in function");
	}

	final public Object SQLMultiplicativeExpression() throws ParseException {
		Function function = null;
		List<Object> params = new ArrayList<Object>();
		Object param;
		param = SQLExponentExpression();
		params.add(param);
		label_4: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 50:
			case 54:
				;
				break;
			default:
				jj_la1[14] = jj_gen;
				break label_4;
			}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 50:
				jj_consume_token(50);
				if (function != null) {
					params.clear();
					params.add(function);
				}
				function = new Multi();
				try {
					function.setParams(params, null);
				} catch (Exception e) {
					{
						if (true)
							throw new ParseException(e.getMessage());
					}
				}
				break;
			case 54:
				jj_consume_token(54);
				if (function != null) {
					params.clear();
					params.add(function);
				}
				function = new Divide();
				try {
					function.setParams(params, null);
				} catch (Exception e) {
					{
						if (true)
							throw new ParseException(e.getMessage());
					}
				}
				param = SQLExponentExpression();
				params.add(param);
				break;
			default:
				jj_la1[15] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		}
		if (function != null) {
			{
				if (true)
					return function;
			}
		} else {
			{
				if (true)
					return param;
			}
		}
		throw new Error("Missing return statement in function");
	}

	final public Object SQLExponentExpression() throws ParseException {
		Object all = "";
		all = SQLPrimaryExpression();
		{
			if (true)
				return all;
		}
		throw new Error("Missing return statement in function");
	}

	final public Object SQLPrimaryExpression() throws ParseException {
		Object expr = null;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case S_NUMBER:
			jj_consume_token(S_NUMBER);
			break;
		case S_CHAR_LITERAL:
			jj_consume_token(S_CHAR_LITERAL);
			break;
		case K_LEFT_BRACE:
			jj_consume_token(K_LEFT_BRACE);
			if (jj_2_1(3)) {
				SelectStatement();
			} else {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case K_LEFT_BRACE:
				case S_NUMBER:
				case S_IDENTIFIER:
				case S_BIND:
				case S_CHAR_LITERAL:
				case S_QUOTED_IDENTIFIER:
				case 48:
					expr = SQLSimpleExpression();
					break;
				default:
					jj_la1[16] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
			}
			jj_consume_token(K_RIGHT_BRACE);
			break;
		case S_BIND:
		case 48:
			BindVariable();
			break;
		default:
			jj_la1[17] = jj_gen;
			if (jj_2_2(2147483647)) {
				expr = FunctionCall();
			} else {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case S_IDENTIFIER:
				case S_QUOTED_IDENTIFIER:
					expr = TableColumn();
					break;
				default:
					jj_la1[18] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
			}
		}
		if (expr != null) {
			{
				if (true)
					return expr;
			}
		} else {
			{
				if (true)
					return token.image;
			}
		}
		throw new Error("Missing return statement in function");
	}

	final public String FunctionReference() throws ParseException {
		String name;
		name = ObjectReference();
		functions.add(name.toUpperCase());
		{
			if (true)
				return name;
		}
		throw new Error("Missing return statement in function");
	}

	final public Function FunctionCall() throws ParseException {
		String functionName = "";
		Function function = null;
		List<Object> params = new ArrayList<Object>();
		functionName = FunctionReference();
		Class<?> clazz = null;
		try {
			clazz = Class.forName("com.clican.pluto.dataprocess.dpl.function.impl." + functionName.substring(0, 1).toUpperCase() + functionName.substring(1));
			function = (Function) clazz.newInstance();
		} catch (Exception e) {

		}
		jj_consume_token(K_LEFT_BRACE);
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case K_LEFT_BRACE:
		case S_NUMBER:
		case S_IDENTIFIER:
		case S_BIND:
		case S_CHAR_LITERAL:
		case S_QUOTED_IDENTIFIER:
		case 48:
			params = FunctionArgumentList();
			break;
		default:
			jj_la1[19] = jj_gen;
			;
		}
		jj_consume_token(K_RIGHT_BRACE);
		try {
			function.setParams(params, null);
		} catch (Exception e) {
			{
				if (true)
					throw new ParseException(e.getMessage());
			}
		}
		{
			if (true)
				return function;
		}
		throw new Error("Missing return statement in function");
	}

	final public List<Object> FunctionArgumentList() throws ParseException {
		List<Object> params = new ArrayList<Object>();
		Object param;
		param = FunctionArgument();
		params.add(param);
		label_5: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case 51:
				;
				break;
			default:
				jj_la1[20] = jj_gen;
				break label_5;
			}
			jj_consume_token(51);
			param = FunctionArgument();
			params.add(param);
		}
		{
			if (true)
				return params;
		}
		throw new Error("Missing return statement in function");
	}

	final public Object FunctionArgument() throws ParseException {
		Object param;
		if (jj_2_3(2)) {
			param = OracleObjectName();
			jj_consume_token(55);
		} else if (jj_2_4(4)) {
			param = OracleObjectName();
			jj_consume_token(49);
			OracleObjectName();
			jj_consume_token(55);
		} else {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case K_LEFT_BRACE:
			case S_NUMBER:
			case S_IDENTIFIER:
			case S_BIND:
			case S_CHAR_LITERAL:
			case S_QUOTED_IDENTIFIER:
			case 48:
				param = SQLSimpleExpression();
				break;
			default:
				jj_la1[21] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		}
		{
			if (true)
				return param;
		}
		throw new Error("Missing return statement in function");
	}

	final public void WhereClause() throws ParseException {
		jj_consume_token(K_WHERE);
		filter = FilterExpression();
	}

	final public Filter FilterExpression() throws ParseException {
		List<Filter> filterList = new ArrayList<Filter>();
		Filter filter = null;
		filter = FilterAndExpression();
		filterList.add(filter);
		label_6: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case K_OR:
				;
				break;
			default:
				jj_la1[22] = jj_gen;
				break label_6;
			}
			jj_consume_token(K_OR);
			filter = FilterAndExpression();
			filterList.add(filter);
		}
		Filter previousFilter = filterList.get(0);
		for (int i = 1; i < filterList.size(); i++) {
			previousFilter = new OrFilter(previousFilter, filterList.get(i));
		}
		{
			if (true)
				return previousFilter;
		}
		throw new Error("Missing return statement in function");
	}

	final public Filter FilterAndExpression() throws ParseException {
		List<Filter> filterList = new ArrayList<Filter>();
		Filter filter = null;
		filter = FilterBraceExpression();
		filterList.add(filter);
		label_7: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case K_AND:
				;
				break;
			default:
				jj_la1[23] = jj_gen;
				break label_7;
			}
			jj_consume_token(K_AND);
			filter = FilterBraceExpression();
			filterList.add(filter);
		}
		Filter previousFilter = filterList.get(0);
		for (int i = 1; i < filterList.size(); i++) {
			previousFilter = new AndFilter(previousFilter, filterList.get(i));
		}
		{
			if (true)
				return previousFilter;
		}
		throw new Error("Missing return statement in function");
	}

	final public Filter FilterBraceExpression() throws ParseException {
		Filter filter = null;
		if (jj_2_5(2147483647)) {
			jj_consume_token(K_LEFT_BRACE);
			filter = FilterExpression();
			jj_consume_token(K_RIGHT_BRACE);
		} else {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case K_LEFT_BRACE:
			case S_NUMBER:
			case S_IDENTIFIER:
			case S_BIND:
			case S_CHAR_LITERAL:
			case S_QUOTED_IDENTIFIER:
			case 48:
				filter = CompareExpression();
				break;
			default:
				jj_la1[24] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		}
		{
			if (true)
				return filter;
		}
		throw new Error("Missing return statement in function");
	}

	final public CompareFilter CompareExpression() throws ParseException {
		PrefixAndSuffix left = null;
		PrefixAndSuffix right = null;
		CompareType compareType = null;
		CompareFilter filter = null;
		/*
		 * Only after looking past "(", Expression() and "," we will know that
		 * it is expression list
		 */

		left = SQLSimpleExpression();
		compareType = OperatorExpression();
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case K_LEFT_BRACE:
		case S_NUMBER:
		case S_IDENTIFIER:
		case S_BIND:
		case S_CHAR_LITERAL:
		case S_QUOTED_IDENTIFIER:
		case 48:
			right = SQLSimpleExpression();
			break;
		default:
			jj_la1[25] = jj_gen;
			;
		}
		try {
			filter = new CompareFilter(left, right, compareType);
			{
				if (true)
					return filter;
			}
		} catch (Exception e) {
			{
				if (true)
					throw new ParseException(e.getMessage());
			}
		}
		throw new Error("Missing return statement in function");
	}

	final public CompareType OperatorExpression() throws ParseException {
		String operation = null;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case K_LEFT_OUTER_JOIN:
			jj_consume_token(K_LEFT_OUTER_JOIN);
			break;
		case K_NOT_EQUAL:
			jj_consume_token(K_NOT_EQUAL);
			break;
		case K_GREAT_EQUAL:
			jj_consume_token(K_GREAT_EQUAL);
			break;
		case K_AFTER_NEAR:
			jj_consume_token(K_AFTER_NEAR);
			break;
		case K_GREAT:
			jj_consume_token(K_GREAT);
			break;
		case K_LESS_EQUAL:
			jj_consume_token(K_LESS_EQUAL);
			break;
		case K_BEFORE_NEAR:
			jj_consume_token(K_BEFORE_NEAR);
			break;
		case K_LESS:
			jj_consume_token(K_LESS);
			break;
		case K_NOT_IN:
			jj_consume_token(K_NOT_IN);
			break;
		case K_IN:
			jj_consume_token(K_IN);
			break;
		case K_IS_NOT_NULL:
			jj_consume_token(K_IS_NOT_NULL);
			break;
		case K_IS_NULL:
			jj_consume_token(K_IS_NULL);
			break;
		case K_NOT_LIKE:
			jj_consume_token(K_NOT_LIKE);
			break;
		case K_LIKE:
			jj_consume_token(K_LIKE);
			break;
		case K_EQUAL:
			jj_consume_token(K_EQUAL);
			break;
		default:
			jj_la1[26] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		operation = token.image;
		;
		for (CompareType compareType : CompareType.values()) {
			if (operation.contains(compareType.getOperation())) {
				{
					if (true)
						return compareType;
				}
			}
		}
		{
			if (true)
				return null;
		}
		throw new Error("Missing return statement in function");
	}

	final public String TableColumn() throws ParseException {
		String expr;
		expr = ObjectReference();
		{
